--- a/aula 7/loja-de-roupas-frontend/package.json
+++ b/aula 7/loja-de-roupas-frontend/package.json
@@ -20,7 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.22.0",
     "bootstrap3": "^3.3.5",
-    "css-loader": "0.26.1",
+    "css-loader": "^3.1.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "font-awesome": "4.7.0",
@@ -40,8 +40,8 @@
     "redux-promise": "0.5.3",
     "redux-thunk": "2.1.0",
     "style-loader": "0.13.1",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2"
+    "webpack": "^4.36.1",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "http-server": "0.10.0"
